--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
-  <link rel="icon" href="assets/logo.png">
+  <link rel="icon" href="assets/images/connected-family.png">
 </head>
 <body>
   <app-root></app-root>
